<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.praktikumprogmob.Main2Activity">

        <!--Header-->
        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_border">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_user" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif-light"
                android:text="Loading..."
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="Loading..."
                android:textAllCaps="false"
                android:textColor="@color/address"
                android:textSize="14sp" />


        </RelativeLayout>

        <!--Button-->
        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rellay1"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_auth"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="@dimen/margin_auth"
                    android:background="@drawable/bg_auth_btn"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/edit_profile"
                    android:textColor="@color/colorTextORIcon"
                    android:textSize="@dimen/text_btn_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"/>

                <Button
                    android:id="@+id/btn_ganti_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_auth"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/margin_auth"
                    android:background="@drawable/bg_auth_btn"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/ganti_password"
                    android:textColor="@color/colorTextORIcon"
                    android:textSize="@dimen/text_btn_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/btn_edit_profile"
                    app:layout_constraintTop_toBottomOf="@id/btn_edit_profile"/>


                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_auth"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/margin_auth"
                    android:background="@drawable/bg_auth_btn"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/logout"
                    android:textColor="@color/colorTextORIcon"
                    android:textSize="@dimen/text_btn_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/btn_ganti_password"
                    app:layout_constraintTop_toBottomOf="@id/btn_ganti_password"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
